--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,11 @@
-.outer-wrapper {
-  display: flex;
-  justify-content: center;
+:host {
   height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  align-content: flex-start;
+}
+.text {
+  height: max-content;
+  min-width: min-content;
 }
